# mcp_python

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
mcp_server/: server.py
tests/: test_server.py
