[tool.poetry]
name = "mcp-python"
version = "0.1.0"
description = "A sample Model Context Protocol (MCP) server in Python."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
arxiv = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
